2001-01-22  John Sullivan  <sullivan@eazel.com>

	Fixed bug 5845 (web bookmarks change to generic document
	icon after visiting)

	* data/mime/gnome-vfs.keys.in:

	Removed all the lines that specify "i-regular" for an
	icon filename. "i-regular" is the default anyway, so 
	specifying it will have no useful effect. In the case
	of bug 5845, it had a bad effect (prevented the special
	web icon from being used). Aaron had intended to make
	this change a while back.

	Note: this bug was marked PR3 so we might want to make this
	simple change on the branched gnome-vfs, if there is one.

2001-01-22  Rebecca Schulman  <rebecka@eazel.com>
	Fixed bugzilla.eazel.com bug 5498 about
	symbolic links across file systems caused 
	copies instead of drags in nautilus.
	This change makes the order uris are
	passed to check_same_fs important.
	The first uri is now the "source
	uri," and the second is the "target uri."
	
	reviewed by: Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-ops.h:
	Change the argument names of check_same_fs to 
	reflect the new argument names
	* modules/file-method.c: (do_check_same_fs):
	Do a stat on the "target uri" but an lstat
	on the "source uri"
	* doc/mime-data-specification.txt:
	Added bug number references to the 
	problems that we list in the specification

2001-01-20  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Rebecca Schulman  <rebecka@eazel.com>

	Work on making Search cancellable.
	
	* libgnomevfs-pthread/gnome-vfs-async-ops.c:
	(pthread_gnome_vfs_async_cancel), (gnome_vfs_job_cancel):
	Move the job cancellation outside the job->access_lock to avoid
	having to have the load_directory call completely finish before
	cancellation takes effect. Move the setting of the cancelled
	flag outside gnome_vfs_job_cancel and into the access_lock so that
	cancellation of the job and cancellation of the callbacks is atomic.
	
	* libgnomevfs/gnome-vfs-cancellable-ops.h:
	* libgnomevfs/gnome-vfs-directory.c: